k8s/fe/blog-gateway-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-route
  namespace: blog-namespace
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "3000m"
spec:
  parentRefs:
    - name: global-gateway
      namespace: gateway-namespace
  hostnames:
    - blog.s4v3.local
    - blog.s4v3.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blog-fe
          port: 80
